Haddock: Fix bug where loader wasn't covering viewport

--- a/laravel/resources/sass/components/component--loader.scss
+++ b/laravel/resources/sass/components/component--loader.scss
@@ -5,7 +5,7 @@
 // Wrapper for the loader
 .loader-indicator--wrapper {
     background-color: $body-bg;
-    height: 100vw;
+    height: 100%;
     left: 0;
     position: fixed;
     top: 0;
